# harbor

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/harbor-ai/: Cargo.toml
crates/harbor-ai/src/: lib.rs
crates/harbor-cli/: Cargo.toml
crates/harbor-cli/src/: main.rs
crates/harbor-core/: Cargo.toml
crates/harbor-core/src/: lib.rs  schema.rs
crates/harbor-http/: Cargo.toml
crates/harbor-http/examples/: minimal_server.rs
crates/harbor-http/src/: lib.rs
crates/harbor-mcp/: Cargo.toml
crates/harbor-mcp/examples/: echo_stdio_server.rs  http_server.rs
crates/harbor-mcp/src/: lib.rs
crates/harbor-memory/: Cargo.toml
crates/harbor-memory/src/: lib.rs
crates/harbor-observability/: Cargo.toml
crates/harbor-observability/src/: lib.rs
crates/harbor-rag/: Cargo.toml
crates/harbor-rag/src/: lib.rs
crates/harbor-runtime/: Cargo.toml
crates/harbor-runtime/examples/: bootstrap_http.rs  hello_agent.rs  retrieval_agent.rs  streaming_agent.rs
crates/harbor-runtime/src/: lib.rs
crates/mcpforge-ai/: Cargo.toml
crates/mcpforge-ai/src/: lib.rs
crates/mcpforge-cli/: Cargo.toml
crates/mcpforge-cli/src/: main.rs
crates/mcpforge-core/: Cargo.toml
crates/mcpforge-mcp/: Cargo.toml
crates/mcpforge-mcp/examples/: echo_stdio_server.rs
crates/mcpforge-mcp/src/: lib.rs
crates/mcpforge-memory/: Cargo.toml
crates/mcpforge-runtime/: Cargo.toml
crates/mcpforge-runtime/examples/: hello_agent.rs
crates/mcpforge-runtime/src/: lib.rs
docs/: ARCHITECTURE.md  ROADMAP.md
