[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.86"
license = "MIT"
authors = ["Devarshi Waghela <w.devarshi@gmail.com>"]
repository = "https://github.com/wdevarshi/harbor"
description = "AI-first Rust framework for building MCP-native solutions"

[workspace.dependencies]
async-trait = "0.1"
axum = { version = "0.7", features = ["json", "http1", "tokio"] }
clap = { version = "4.5", features = ["derive"] }
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "io-util", "io-std", "process", "sync", "fs", "net", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
