[package]
name = "harbor-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
opentelemetry.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
harbor-core = { path = "../harbor-core" }

[dev-dependencies]
axum.workspace = true
opentelemetry_sdk.workspace = true
tokio.workspace = true
