[package]
name = "harbor-http"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
axum.workspace = true
metrics.workspace = true
opentelemetry.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
uuid.workspace = true
harbor-core = { path = "../harbor-core" }

[[example]]
name = "minimal_server"
path = "examples/minimal_server.rs"
