[package]
name = "harbor-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
harbor-core = { path = "../harbor-core" }

[[example]]
name = "echo_stdio_server"
path = "examples/echo_stdio_server.rs"
