[package]
name = "harbor-observability"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
harbor-core = { path = "../harbor-core" }
metrics-exporter-prometheus.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
