[package]
name = "mcpforge-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
mcpforge-core = { path = "../mcpforge-core" }

[[example]]
name = "echo_stdio_server"
path = "examples/echo_stdio_server.rs"
