[package]
name = "mcpforge-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
mcpforge-core = { path = "../mcpforge-core" }
mcpforge-ai = { path = "../mcpforge-ai" }
mcpforge-memory = { path = "../mcpforge-memory" }

[[example]]
name = "hello_agent"
path = "examples/hello_agent.rs"
